--- a/aaai2020/environment.yml
+++ b/aaai2020/environment.yml
@@ -1,127 +1,156 @@
 name: onecommon
 channels:
-- pytorch
-- defaults
+  - defaults
 dependencies:
-- _libgcc_mutex=0.1=main
-- asn1crypto=1.3.0=py36_0
-- attrs=19.3.0=py_0
-- backcall=0.1.0=py36_0
-- blas=1.0=mkl
-- bleach=3.1.0=py36_0
-- ca-certificates=2020.1.1=0
-- certifi=2019.11.28=py36_0
-- cffi=1.13.2=py36h2e261b9_0
-- chardet=3.0.4=py36_1003
-- cryptography=2.8=py36h1ba5d50_0
-- cudatoolkit=10.0.130=0
-- cycler=0.10.0=py36_0
-- dbus=1.13.12=h746ee38_0
-- decorator=4.4.1=py_0
-- defusedxml=0.6.0=py_0
-- entrypoints=0.3=py36_0
-- expat=2.2.6=he6710b0_0
-- fontconfig=2.13.0=h9420a91_0
-- freetype=2.9.1=h8a8886c_1
-- glib=2.63.1=h5a9c865_0
-- gmp=6.1.2=h6c8ec71_1
-- gst-plugins-base=1.14.0=hbbd80ab_1
-- gstreamer=1.14.0=hb453b48_1
-- icu=58.2=h9c2bf20_1
-- idna=2.8=py36_0
-- importlib_metadata=1.3.0=py36_0
-- intel-openmp=2019.4=243
-- ipykernel=5.1.3=py36h39e3cac_1
-- ipython=7.11.1=py36h39e3cac_0
-- ipython_genutils=0.2.0=py36_0
-- ipywidgets=7.5.1=py_0
-- jedi=0.15.2=py36_0
-- jinja2=2.10.3=py_0
-- jpeg=9b=h024ee3a_2
-- jsonschema=3.2.0=py36_0
-- jupyter=1.0.0=py36_7
-- jupyter_client=5.3.4=py36_0
-- jupyter_console=6.1.0=py_0
-- jupyter_core=4.6.1=py36_0
-- kiwisolver=1.1.0=py36he6710b0_0
-- ld_impl_linux-64=2.33.1=h53a641e_7
-- libedit=3.1.20181209=hc058e9b_0
-- libffi=3.2.1=hd88cf55_4
-- libgcc-ng=9.1.0=hdf63c60_0
-- libgfortran-ng=7.3.0=hdf63c60_0
-- libpng=1.6.37=hbc83047_0
-- libsodium=1.0.16=h1bed415_0
-- libstdcxx-ng=9.1.0=hdf63c60_0
-- libuuid=1.0.3=h1bed415_2
-- libxcb=1.13=h1bed415_1
-- libxml2=2.9.9=hea5a465_1
-- markupsafe=1.1.1=py36h7b6447c_0
-- matplotlib=3.1.1=py36h5429711_0
-- mistune=0.8.4=py36h7b6447c_0
-- mkl=2019.4=243
-- mkl-service=2.3.0=py36he904b0f_0
-- mkl_fft=1.0.15=py36ha843d7b_0
-- mkl_random=1.1.0=py36hd6b4f25_0
-- more-itertools=8.0.2=py_0
-- nbconvert=5.6.1=py36_0
-- nbformat=4.4.0=py36_0
-- ncurses=6.1=he6710b0_1
-- ninja=1.9.0=py36hfd86e86_0
-- nltk=3.4.5=py36_0
-- notebook=6.0.2=py36_0
-- numpy=1.18.1=py36h4f9e942_0
-- numpy-base=1.18.1=py36hde5b4d6_1
-- openssl=1.1.1d=h7b6447c_3
-- pandas=0.25.3=py36he6710b0_0
-- pandoc=2.2.3.2=0
-- pandocfilters=1.4.2=py36_1
-- parso=0.5.2=py_0
-- patsy=0.5.1=py36_0
-- pcre=8.43=he6710b0_0
-- pexpect=4.7.0=py36_0
-- pickleshare=0.7.5=py36_0
-- pip=19.3.1=py36_0
-- prometheus_client=0.7.1=py_0
-- prompt_toolkit=3.0.2=py_0
-- ptyprocess=0.6.0=py36_0
-- pycparser=2.19=py36_0
-- pygments=2.5.2=py_0
-- pyopenssl=19.1.0=py36_0
-- pyparsing=2.4.6=py_0
-- pyqt=5.9.2=py36h05f1152_2
-- pyrsistent=0.15.6=py36h7b6447c_0
-- pysocks=1.7.1=py36_0
-- python=3.6.10=h0371630_0
-- python-dateutil=2.8.1=py_0
-- pytz=2019.3=py_0
-- pyzmq=18.1.0=py36he6710b0_0
-- qt=5.9.7=h5867ecd_1
-- qtconsole=4.6.0=py_1
-- readline=7.0=h7b6447c_5
-- requests=2.22.0=py36_1
-- scipy=1.3.2=py36h7c811a0_0
-- seaborn=0.9.0=pyh91ea838_1
-- send2trash=1.5.0=py36_0
-- setuptools=44.0.0=py36_0
-- sip=4.19.8=py36hf484d3e_0
-- six=1.13.0=py36_0
-- sqlite=3.30.1=h7b6447c_0
-- statsmodels=0.10.1=py36hdd07704_0
-- terminado=0.8.3=py36_0
-- testpath=0.4.4=py_0
-- tk=8.6.8=hbc83047_0
-- tornado=6.0.3=py36h7b6447c_0
-- tqdm=4.41.1=py_0
-- traitlets=4.3.3=py36_0
-- urllib3=1.25.7=py36_0
-- wcwidth=0.1.7=py36_0
-- webencodings=0.5.1=py36_1
-- wheel=0.33.6=py36_0
-- widgetsnbextension=3.5.1=py36_0
-- xz=5.2.4=h14c3975_4
-- zeromq=4.3.1=he6710b0_3
-- zipp=0.6.0=py_0
-- zlib=1.2.11=h7b6447c_3
-- pytorch=1.3.0=py3.6_cuda10.0.130_cudnn7.6.3_0
-prefix: /global/scratch/dfried/anaconda2/envs/onecommon
+  - _libgcc_mutex=0.1=main
+  - asn1crypto=1.3.0=py36_0
+  - attrs=19.3.0=py_0
+  - backcall=0.1.0=py36_0
+  - blas=1.0=mkl
+  - bleach=3.1.0=py36_0
+  - ca-certificates=2020.6.24=0
+  - certifi=2020.6.20=py36_0
+  - cffi=1.13.2=py36h2e261b9_0
+  - chardet=3.0.4=py36_1003
+  - click=7.1.2=py_0
+  - cryptography=2.8=py36h1ba5d50_0
+  - cudatoolkit=10.0.130=0
+  - cycler=0.10.0=py36_0
+  - dbus=1.13.12=h746ee38_0
+  - decorator=4.4.1=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py36_0
+  - expat=2.2.6=he6710b0_0
+  - flask=1.1.2=py_0
+  - flask-socketio=4.3.0=py_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_1
+  - glib=2.63.1=h5a9c865_0
+  - gmp=6.1.2=h6c8ec71_1
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
+  - icu=58.2=h9c2bf20_1
+  - idna=2.8=py36_0
+  - importlib_metadata=1.3.0=py36_0
+  - intel-openmp=2019.4=243
+  - ipykernel=5.1.3=py36h39e3cac_1
+  - ipython=7.11.1=py36h39e3cac_0
+  - ipython_genutils=0.2.0=py36_0
+  - ipywidgets=7.5.1=py_0
+  - itsdangerous=1.1.0=py36_0
+  - jedi=0.15.2=py36_0
+  - jinja2=2.10.3=py_0
+  - jpeg=9b=h024ee3a_2
+  - jsonschema=3.2.0=py36_0
+  - jupyter=1.0.0=py36_7
+  - jupyter_client=5.3.4=py36_0
+  - jupyter_console=6.1.0=py_0
+  - jupyter_core=4.6.1=py36_0
+  - kiwisolver=1.1.0=py36he6710b0_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.16=h1bed415_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.9=hea5a465_1
+  - markupsafe=1.1.1=py36h7b6447c_0
+  - matplotlib=3.1.1=py36h5429711_0
+  - mistune=0.8.4=py36h7b6447c_0
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py36he904b0f_0
+  - mkl_fft=1.0.15=py36ha843d7b_0
+  - mkl_random=1.1.0=py36hd6b4f25_0
+  - more-itertools=8.0.2=py_0
+  - nbconvert=5.6.1=py36_0
+  - nbformat=4.4.0=py36_0
+  - ncurses=6.1=he6710b0_1
+  - ninja=1.9.0=py36hfd86e86_0
+  - nltk=3.4.5=py36_0
+  - notebook=6.0.2=py36_0
+  - numpy=1.18.1=py36h4f9e942_0
+  - numpy-base=1.18.1=py36hde5b4d6_1
+  - openssl=1.1.1g=h7b6447c_0
+  - pandas=0.25.3=py36he6710b0_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py36_1
+  - parso=0.5.2=py_0
+  - patsy=0.5.1=py36_0
+  - pcre=8.43=he6710b0_0
+  - pexpect=4.7.0=py36_0
+  - pickleshare=0.7.5=py36_0
+  - pip=19.3.1=py36_0
+  - prometheus_client=0.7.1=py_0
+  - prompt_toolkit=3.0.2=py_0
+  - ptyprocess=0.6.0=py36_0
+  - pycparser=2.19=py36_0
+  - pygments=2.5.2=py_0
+  - pyopenssl=19.1.0=py36_0
+  - pyparsing=2.4.6=py_0
+  - pyqt=5.9.2=py36h05f1152_2
+  - pyrsistent=0.15.6=py36h7b6447c_0
+  - pysocks=1.7.1=py36_0
+  - python=3.6.10=h0371630_0
+  - python-dateutil=2.8.1=py_0
+  - python-engineio=3.13.1=py_0
+  - python-socketio=4.5.1=py_0
+  - pytz=2019.3=py_0
+  - pyzmq=18.1.0=py36he6710b0_0
+  - qt=5.9.7=h5867ecd_1
+  - qtconsole=4.6.0=py_1
+  - readline=7.0=h7b6447c_5
+  - requests=2.22.0=py36_1
+  - scipy=1.3.2=py36h7c811a0_0
+  - seaborn=0.9.0=pyh91ea838_1
+  - send2trash=1.5.0=py36_0
+  - setuptools=44.0.0=py36_0
+  - sip=4.19.8=py36hf484d3e_0
+  - six=1.13.0=py36_0
+  - sqlite=3.30.1=h7b6447c_0
+  - statsmodels=0.10.1=py36hdd07704_0
+  - terminado=0.8.3=py36_0
+  - testpath=0.4.4=py_0
+  - tk=8.6.8=hbc83047_0
+  - tornado=6.0.3=py36h7b6447c_0
+  - tqdm=4.41.1=py_0
+  - traitlets=4.3.3=py36_0
+  - urllib3=1.25.7=py36_0
+  - wcwidth=0.1.7=py36_0
+  - webencodings=0.5.1=py36_1
+  - werkzeug=1.0.1=py_0
+  - wheel=0.33.6=py36_0
+  - widgetsnbextension=3.5.1=py36_0
+  - xz=5.2.4=h14c3975_4
+  - zeromq=4.3.1=he6710b0_3
+  - zipp=0.6.0=py_0
+  - zlib=1.2.11=h7b6447c_3
+  - pip:
+    - docopt==0.6.2
+    - editdistance==0.5.3
+    - einops==0.2.0
+    - future==0.18.2
+    - genbmm==0.1
+    - gevent==20.6.2
+    - greenlet==0.4.16
+    - ipyplot==1.0.5
+    - mosestokenizer==1.1.0
+    - namedtensor==0.0.2
+    - openfile==0.0.7
+    - opt-einsum==3.2.1
+    - pillow==7.2.0
+    - pyro-api==0.1.2
+    - pyro-ppl==1.3.1
+    - sentencepiece==0.1.92
+    - toolwrapper==2.1.0
+    - torch==1.5.1
+    - torch-struct==0.4
+    - torchtext==0.6.0
+    - uctools==1.2.1
+    - zope-event==4.4
+    - zope-interface==5.1.0
+prefix: /home/dfried/miniconda3/envs/onecommon
 
