--- a/webapp/src/web/app_params.json
+++ b/webapp/src/web/app_params.json
@@ -1,57 +1,1 @@
-{
-    "status_params": {
-	    "waiting": {
-	        "num_seconds": 180
-	    },
-	    "chat": {
-	        "num_seconds": 380
-	    },
-	    "finished": {
-	        "num_seconds": -1
-	    },
-	    "redirected": {
-	        "num_seconds": -1
-	    },
-	    "incomplete": {
-	        "num_seconds": -1
-	    },
-	    "reporting": {
-	        "num_seconds": -1
-	    },
-        "survey": {
-	        "num_seconds": -1
-	    }
-    },
-
-    "scenarios_json_file": "data/scenarios.json",
-    "idle_timeout_num_seconds": 200,
-    "connection_timeout_num_seconds": 3,
-    "templates_dir": "web/templates",
-    "images_base": "web/static/images",
-    "end_survey": 0,
-    "instructions": "web/templates/instructions.html",
-    "coreference_instructions": "web/templates/coreference_instructions.html",
-    "task_title": "Find One In Common!",
-    "icon": "handshake.jpg",
-    "num_chats_per_scenario": {
-        "human": 1,
-        "full": 1,
-        "uabaseline": 1
-    },
-    "models": {
-        "full": {
-            "active": true,
-            "type": "full",
-            "model_path": "full.th",
-            "markable_detector_path": "markable_detector.th"
-        },
-        "uabaseline": {
-            "active": true,
-            "type": "uabaseline",
-            "model_path": "full.th",
-            "markable_detector_path": "markable_detector.th"
-        }
-    },
-    "debug": false,
-    "quit_after": 1200
-}
+app_params.json.full
