--- a/aaai2020/experiments/analysis_log/S_Upxt2aKAB11BrAnX.json
+++ b/aaai2020/experiments/analysis_log/S_Upxt2aKAB11BrAnX.json
@@ -2,157 +2,288 @@
     {
         "agent_id": 0,
         "belief": [
-            0.02408227959412707,
-            0.023534297045946413,
-            0.023534297045946413,
-            0.023534297045946413,
-            0.023534297045946413
+            0.02131212748762501,
+            0.021072204263056876,
+            0.021072204263056876,
+            0.021072204263056876,
+            0.021072204263056876
         ],
         "belief2": [
-            0.012888964861960873,
-            0.012888964861960873,
-            0.012888964861960873,
-            0.012888964861960873,
-            0.012595681670855051
+            0.016244609994609995,
+            0.016244609994609995,
+            0.016061734811734812,
+            0.016061734811734812,
+            0.016061734811734812
         ],
         "belief3": [
-            0.025235560531873612,
-            0.025027380857170784,
-            0.025027380857170784,
-            0.025027380857170784,
-            0.025027380857170784
+            0.022662102059925096,
+            0.02260358146067416,
+            0.02260358146067416,
+            0.02260358146067416,
+            0.02260358146067416
         ],
         "marginal_belief": [
-            0.471637807054395,
-            0.471637807054395,
-            0.471637807054395,
-            0.471637807054395,
-            0.8657505390645062,
-            0.800225248991722,
-            0.471637807054395
+            0.47525002525507637,
+            0.47525002525507637,
+            0.47525002525507637,
+            0.47525002525507637,
+            0.7872007273461962,
+            0.47525002525507637,
+            0.7872007273461962
         ],
         "marginal_belief2": [
-            0.486250432898511,
-            0.6297791551597061,
-            0.48625043289851094,
-            0.48625043289851094,
-            0.6297791551597061,
-            0.6119226021862484,
-            0.6119226021862484
+            0.4831369831369833,
+            0.6000231000231,
+            0.48313698313698317,
+            0.48313698313698317,
+            0.6000231000231,
+            0.48313698313698317,
+            0.8148533148533144
         ],
         "marginal_belief3": [
-            0.4761625478748454,
-            0.4761625478748454,
-            0.4761625478748454,
-            0.4761625478748454,
-            0.8834030906489648,
-            0.8355904490238419,
-            0.4761625478748454
+            0.47752808988764056,
+            0.47752808988764056,
+            0.47752808988764056,
+            0.47752808988764056,
+            0.8040730337078659,
+            0.47752808988764056,
+            0.8040730337078659
+        ],
+        "plan2_mentions": null,
+        "plan2_mentions_language": null,
+        "plan2_partner_ref": null,
+        "plan2_plan": null,
+        "plan3_mentions": null,
+        "plan3_mentions_language": null,
+        "plan3_partner_ref": null,
+        "plan3_plan": null,
+        "plan_mentions": null,
+        "plan_mentions_language": null,
+        "plan_partner_ref": null,
+        "plan_plan": null,
+        "prior_mentions": null,
+        "prior_mentions_language": null,
+        "prior_partner_ref": null,
+        "prior_plan": null,
+        "response": null,
+        "response_language": "Do you see a large light grey dot with a smalelr black dot right beside it on the right?",
+        "response_utt": [
+            0,
+            0,
+            0,
+            0,
+            1,
+            0,
+            1
+        ],
+        "utterance": null,
+        "utterance_language": null
+    },
+    {
+        "agent_id": 1,
+        "belief": [
+            0.021312127487625013,
+            0.02107220426305688,
+            0.02107220426305688,
+            0.02107220426305688,
+            0.02107220426305688
+        ],
+        "belief2": [
+            0.012198250939577913,
+            0.012198250939577913,
+            0.012198250939577913,
+            0.012198250939577913,
+            0.012060928013876844
+        ],
+        "belief3": [
+            0.022662102059925096,
+            0.02260358146067416,
+            0.02260358146067416,
+            0.02260358146067416,
+            0.02260358146067416
+        ],
+        "marginal_belief": [
+            0.4752500252550764,
+            0.4752500252550764,
+            0.4752500252550764,
+            0.4752500252550764,
+            0.7872007273461963,
+            0.7872007273461963,
+            0.4752500252550765
+        ],
+        "marginal_belief2": [
+            0.48953454755709747,
+            0.6118820468343451,
+            0.48953454755709735,
+            0.48953454755709735,
+            0.6118820468343451,
+            0.6118820468343451,
+            0.6118820468343451
+        ],
+        "marginal_belief3": [
+            0.47752808988764056,
+            0.47752808988764056,
+            0.47752808988764056,
+            0.47752808988764056,
+            0.8040730337078659,
+            0.8040730337078659,
+            0.47752808988764056
         ],
         "plan2_mentions": [
             [
                 0,
+                0,
                 1,
                 0,
                 0,
-                1,
                 1,
                 1
             ],
             [
-                1,
-                1,
+                0,
                 0,
                 1,
                 1,
                 0,
+                1,
                 0
             ],
             [
                 1,
                 0,
-                0,
                 1,
                 0,
+                0,
                 1,
-                1
+                0
             ],
             [
                 0,
-                1,
-                0,
                 0,
                 1,
                 0,
-                1
+                1,
+                1,
+                0
             ]
         ],
-        "plan2_mentions_language ": null,
+        "plan2_mentions_language": null,
         "plan2_partner_ref": null,
         "plan2_plan": null,
         "plan3_mentions": [
             [
-                1,
-                0,
-                0,
                 0,
                 0,
                 1,
-                0
-            ],
-            [
+                0,
                 1,
-                0,
-                0,
-                0,
-                0,
                 0,
                 1
             ],
             [
                 0,
+                0,
+                0,
+                0,
                 1,
                 1,
-                0,
-                0,
-                0,
-                0
+                1
             ],
             [
                 0,
                 1,
                 0,
+                0,
                 1,
                 0,
+                1
+            ],
+            [
                 0,
-                0
+                0,
+                0,
+                1,
+                1,
+                0,
+                1
             ]
         ],
-        "plan3_mentions_language ": "i have two black dots with a small dark dot to the right and below a slightly larger dark dot <eos>",
+        "plan3_mentions_language": "i have a cluster of three dots . one is dark gray and the other is light grey . the bottom is the same size and dark grey <eos>",
         "plan3_partner_ref": [
             [
                 [
+                    0,
                     1,
                     0,
                     0,
+                    1,
+                    1,
+                    0
+                ]
+            ],
+            [
+                [
                     0,
                     0,
+                    0,
+                    0,
+                    0,
+                    1,
+                    0
+                ]
+            ],
+            [
+                [
+                    0,
+                    0,
+                    0,
+                    0,
+                    1,
                     0,
                     0
                 ]
             ],
             [
                 [
+                    0,
+                    0,
+                    0,
+                    0,
+                    0,
+                    1,
+                    0
+                ]
+            ]
+        ],
+        "plan3_plan": [
+            [
+                [
+                    0,
+                    0,
+                    1,
+                    0,
+                    1,
+                    0,
+                    1
+                ],
+                [
+                    0,
+                    0,
                     1,
                     0,
                     0,
                     0,
+                    0
+                ],
+                [
                     0,
+                    0,
+                    0,
+                    0,
+                    1,
                     0,
                     0
-                ]
-            ],
-            [
+                ],
                 [
                     0,
                     0,
@@ -164,53 +295,13 @@
                 ]
             ]
         ],
-        "plan3_plan": [
-            [
-                [
-                    1,
-                    0,
-                    0,
-                    0,
-                    0,
-                    1,
-                    0
-                ],
-                [
-                    1,
-                    0,
-                    0,
-                    0,
-                    0,
-                    0,
-                    0
-                ],
-                [
-                    0,
-                    0,
-                    0,
-                    0,
-                    0,
-                    1,
-                    0
-                ]
-            ]
-        ],
         "plan_mentions": [
             [
-                1,
-                0,
-                1,
                 0,
                 0,
-                0,
-                0
-            ],
-            [
                 0,
                 1,
-                0,
-                0,
-                0,
+                1,
                 0,
                 1
             ],
@@ -219,21 +310,30 @@
                 0,
                 1,
                 0,
+                1,
                 0,
+                1
+            ],
+            [
+                1,
+                0,
+                0,
+                0,
+                1,
                 0,
                 1
             ],
             [
                 0,
-                1,
                 0,
                 0,
                 0,
                 1,
-                0
+                1,
+                1
             ]
         ],
-        "plan_mentions_language ": null,
+        "plan_mentions_language": null,
         "plan_partner_ref": null,
         "plan_plan": null,
         "prior_mentions": [
@@ -243,7 +343,7 @@
                 0,
                 0,
                 1,
-                1,
+                0,
                 0
             ],
             [
@@ -251,18 +351,9 @@
                 0,
                 0,
                 0,
-                1,
-                1,
-                0
-            ],
-            [
-                0,
-                1,
                 0,
                 0,
-                1,
-                1,
-                0
+                1
             ],
             [
                 0,
@@ -270,11 +361,20 @@
                 0,
                 0,
                 1,
+                0,
+                1
+            ],
+            [
                 1,
+                0,
+                0,
+                0,
+                0,
+                0,
                 0
             ]
         ],
-        "prior_mentions_language ": "i have a large light gray dot with a smaller black dot above and to the right of it <eos>",
+        "prior_mentions_language": "yes i see that <eos>",
         "prior_partner_ref": [
             [
                 [
@@ -283,29 +383,7 @@
                     0,
                     0,
                     1,
-                    0,
-                    0
-                ]
-            ],
-            [
-                [
-                    0,
-                    0,
-                    0,
-                    0,
-                    0,
-                    0,
-                    1
-                ]
-            ],
-            [
-                [
-                    0,
-                    0,
-                    0,
-                    0,
                     1,
-                    0,
                     0
                 ]
             ]
@@ -319,25 +397,7 @@
                     0,
                     1,
                     0,
-                    0
-                ],
-                [
-                    0,
-                    0,
-                    0,
-                    0,
-                    0,
-                    1,
-                    0
-                ],
-                [
-                    0,
-                    0,
-                    0,
-                    0,
-                    1,
-                    0,
-                    0
+                    1
                 ]
             ]
         ],
@@ -358,9 +418,278 @@
             0,
             0,
             1,
-            1,
+            0,
             0
         ],
-        "utterance_language": "Do you see a large light grey dot with a smalelr black dot right beside it on the right?"
+        "utterance_language": "yes! click that large light one!"
+    },
+    {
+        "agent_id": 0,
+        "belief": [
+            0.02408227959412707,
+            0.023534297045946416,
+            0.023534297045946416,
+            0.023534297045946416,
+            0.023534297045946416
+        ],
+        "belief2": [
+            0.0172742698930838,
+            0.0172742698930838,
+            0.016881200856700678,
+            0.016881200856700678,
+            0.016881200856700678
+        ],
+        "belief3": [
+            0.025235560531873615,
+            0.025027380857170788,
+            0.025027380857170788,
+            0.025027380857170788,
+            0.025027380857170788
+        ],
+        "marginal_belief": [
+            0.471637807054395,
+            0.471637807054395,
+            0.471637807054395,
+            0.471637807054395,
+            0.8657505390645062,
+            0.471637807054395,
+            0.8002252489917221
+        ],
+        "marginal_belief2": [
+            0.47988424353416176,
+            0.6210046857661348,
+            0.47988424353416176,
+            0.47988424353416176,
+            0.6210046857661348,
+            0.47988424353416176,
+            0.8201214214680739
+        ],
+        "marginal_belief3": [
+            0.4761625478748455,
+            0.4761625478748455,
+            0.4761625478748455,
+            0.4761625478748455,
+            0.8834030906489653,
+            0.47616254787484547,
+            0.8355904490238423
+        ],
+        "plan2_mentions": [
+            [
+                1,
+                0,
+                1,
+                1,
+                0,
+                0,
+                0
+            ],
+            [
+                1,
+                0,
+                0,
+                1,
+                0,
+                0,
+                1
+            ],
+            [
+                1,
+                0,
+                0,
+                1,
+                0,
+                1,
+                0
+            ],
+            [
+                1,
+                0,
+                0,
+                1,
+                1,
+                0,
+                0
+            ]
+        ],
+        "plan2_mentions_language": null,
+        "plan2_partner_ref": null,
+        "plan2_plan": null,
+        "plan3_mentions": [
+            [
+                0,
+                1,
+                0,
+                0,
+                1,
+                1,
+                0
+            ],
+            [
+                0,
+                0,
+                0,
+                1,
+                1,
+                1,
+                0
+            ],
+            [
+                0,
+                0,
+                0,
+                0,
+                1,
+                1,
+                1
+            ],
+            [
+                1,
+                0,
+                0,
+                0,
+                1,
+                1,
+                0
+            ]
+        ],
+        "plan3_mentions_language": "i see that . the large light gray one has a larger light grey dot to the right of it <eos>",
+        "plan3_partner_ref": [
+            [
+                [
+                    0,
+                    0,
+                    0,
+                    0,
+                    1,
+                    0,
+                    1
+                ]
+            ],
+            [
+                [
+                    0,
+                    0,
+                    0,
+                    0,
+                    1,
+                    0,
+                    0
+                ]
+            ],
+            [
+                [
+                    0,
+                    0,
+                    0,
+                    0,
+                    0,
+                    0,
+                    1
+                ]
+            ],
+            [
+                [
+                    0,
+                    0,
+                    0,
+                    0,
+                    1,
+                    0,
+                    0
+                ]
+            ]
+        ],
+        "plan3_plan": [
+            [
+                [
+                    0,
+                    1,
+                    0,
+                    0,
+                    1,
+                    1,
+                    0
+                ],
+                [
+                    0,
+                    1,
+                    0,
+                    0,
+                    0,
+                    0,
+                    0
+                ],
+                [
+                    0,
+                    0,
+                    0,
+                    0,
+                    1,
+                    0,
+                    0
+                ],
+                [
+                    0,
+                    0,
+                    0,
+                    0,
+                    0,
+                    1,
+                    0
+                ]
+            ]
+        ],
+        "plan_mentions": [
+            [
+                1,
+                0,
+                0,
+                0,
+                1,
+                1,
+                0
+            ],
+            [
+                0,
+                1,
+                0,
+                0,
+                1,
+                1,
+                0
+            ],
+            [
+                0,
+                0,
+                1,
+                0,
+                1,
+                1,
+                0
+            ],
+            [
+                0,
+                0,
+                0,
+                1,
+                1,
+                1,
+                0
+            ]
+        ],
+        "plan_mentions_language": null,
+        "plan_partner_ref": null,
+        "plan_plan": null,
+        "prior_mentions": null,
+        "prior_mentions_language": "okay <selection>",
+        "prior_partner_ref": null,
+        "prior_plan": [
+            []
+        ],
+        "response": 1,
+        "response_language": "Okay!",
+        "response_utt": null,
+        "utterance": null,
+        "utterance_language": "Okay!"
     }
 ]
