--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,15 +1,44 @@
-certifi==2016.2.28
-Click==7.0
-Flask==1.0
-Flask-SocketIO==4.2.1
-gevent==1.4.0
-greenlet==0.4.15
-itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-numpy==1.19.4
-psutil==5.6.6
-python-engineio==3.10.0
-python-socketio==4.3.1
-six==1.13.0
-Werkzeug==0.16.0
+certifi
+Click
+Flask
+Flask-SocketIO
+gevent
+greenlet
+itsdangerous
+Jinja2
+MarkupSafe
+numpy
+psutil
+python-engineio
+python-socketio
+six
+Werkzeug
+pyopenssl
+
+
+# onecommon-gpt
+datasets
+evaluate
+openai
+scikit-learn
+shapely
+streamlit
+streamlit-chat
+matplotlib
+tenacity
+seaborn
+more-itertools
+torch
+
+git+https://github.com/justinchiu/MiniChain@chatgpt#egg=minichain
+git+https://github.com/justinchiu/onecommon-gpt
+
+# testing
+pytest
+
+# for fried 2021
+nltk
+einops
+wandb
+git+https://github.com/justinchiu/pytorch-struct
+pyro-ppl
