--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -2,8 +2,10 @@ certifi
 Click
 Flask
 Flask-SocketIO
-greenlet==1.1.3
-gevent==21.8.0
+#greenlet==1.1.3
+#gevent==21.8.0
+gevent
+greenlet
 itsdangerous
 Jinja2
 MarkupSafe
@@ -31,7 +33,7 @@ more-itertools
 torch
 
 git+https://github.com/justinchiu/MiniChain@chatgpt#egg=minichain
-git+https://github.com/justinchiu/onecommon-gpt
+#git+https://github.com/justinchiu/onecommon-gpt
 
 # testing
 pytest
